fix filter on mobile

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,10 +1,3 @@
-/* small pc */
-@media (max-width: 1239px) {
-    .category-group-item [type='checkbox']:checked ~ label::after {
-        top: 13px;
-    }
-}
-
 /* Mobile & Tablet */
 @media (max-width: 1023px) {
     .hide-on-mobile-tablet {
